--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Tests
 
 on:
   push:
@@ -34,7 +34,9 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+    - name: Run tests with coverage
       run: |
-        pytest tests/test*
-        coverage-badge -o "https://github.com/chorongi/ml_layers/actions/workflows/python-app.yml/coverage.svg"
+        coverage run -m unittest discover -s tests
+        coverage report -m
+    - name: Upload coverage report
+      run: coverage-badge -o docs/coverage.svg
